--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="js/knockout-3.4.0.js"></script>
+        <script src="js/findermodel.js"></script>
         <script src="js/custom.js"></script>
         <script src="js/select2.min.js"></script>
     </head>
