--- a/profile-page.html
+++ b/profile-page.html
@@ -4,21 +4,32 @@
         <meta charset="utf-8">
         <link href="css/select2.min.css" rel="stylesheet" />
         <link href="css/font-awesome.min.css" rel="stylesheet" />
+        <link href="css/slick.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="js/knockout-3.4.0.js"></script>
         <script src="js/findermodel.js"></script>
         <script src="js/custom.js"></script>
         <script src="js/select2.min.js"></script>
+        <script src="js/slick.min.js"></script>
     </head>
     <body>
         <header>
             <div class="container">
-                <div class="header-logo">
-                    <a href="/">
-                        <img src="images/logo.png" />
-                        <h1 class="main-title">eWorkers</h1>
-                    </a>
+                <div class="header-logo profile-header">
+                    <div class="person-img">
+                        <img src="images/Pavel.png" />
+                    </div>
+                    <h1 class="name-title">Pavel Voronovsky</h1>
+                    <span class="caste-title">Designer</span>
+                    <ul class="social-btns">
+                        <li class="list-item">
+                            <a href="/" class="facebook-link">Facebook</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="/" class="linkedin-link">LinkedIn</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </header>
