--- a/profile-page.html
+++ b/profile-page.html
@@ -12,8 +12,9 @@
         <script src="js/custom.js"></script>
         <script src="js/select2.min.js"></script>
         <script src="js/slick.min.js"></script>
+        <script src="js/jquery.tabslet.min.js"></script>
     </head>
-    <body>
+    <body class="profile-page">
         <header>
             <div class="container">
                 <div class="header-logo profile-header">
@@ -24,10 +25,10 @@
                     <span class="caste-title">Designer</span>
                     <ul class="social-btns">
                         <li class="list-item">
-                            <a href="/" class="facebook-link">Facebook</a>
+                            <a href="/" class="facebook-link item-link"></a>
                         </li>
                         <li class="list-item">
-                            <a href="/" class="linkedin-link">LinkedIn</a>
+                            <a href="/" class="linkedin-link item-link"></a>
                         </li>
                     </ul>
                 </div>
@@ -35,124 +36,79 @@
         </header>
         <main>
             <div class="container">
-                <div class="filter-wrapper">
-                    <select class="tags-select form-control select2-hidden-accessible" multiple="" tabindex="-1"
-                            aria-hidden="true">
-                        <optgroup label="Caste">
-                            <option value="manager">Manager</option>
-                            <option value="dev">Developer</option>
-                            <option value="design">Desinger</option>
-                        </optgroup>
-                        <optgroup label="Programming Languages">
-                            <option value="php">PHP</option>
-                            <option value="html">HTML</option>
-                            <option value="css">CSS</option>
-                        </optgroup>
-                        <optgroup label="Peoples">
-                            <option value="dima">Dima</option>
-                            <option value="eugene">Eugene</option>
-                            <option value="vitaliy">Vitaliy</option>
-                        </optgroup>
-                    </select>
-                    <div class="select-wrapper">
-                        <select class="single-select">
-                            <option value="AL">Alabama</option>
-                            <option value="KY">Kentucky</option>
-                            <option value="WY">Wyoming</option>
-                        </select>
-                    </div>
-                    <!--<h2>Participants</h2>-->
-                    <!--Here are the participants:-->
-                    <!--<div data-bind="template: { name: 'person-template', foreach: people }"></div>-->
-
-                    <!--<script type="text/html" id="person-template">-->
-                    <!--<h3 data-bind="text: name"></h3>-->
-                    <!--<p>Credits: <span data-bind="text: caste"></span></p>-->
-                    <!--</script>-->
-                </div>
-                <div class="content">
-                    <section class="worker-item">
-                        <a href="/" class="main-link">
-                            <div class="img-wrapper">
-                                <img src="images/Pavel.png" />
+                <div class="profile-content">
+                    <section class="main-info">
+                        <div class="info-about">
+                            <h2 class="info-title">
+                                Hello, I'm <span class="title-yellow">Pavel Voronevsky</span><br /> designer and
+                                art-director
+                            </h2>
+                            <table class="trololo">
+                                <tr>
+                                    <th>Birthday</th>
+                                    <td>05.02.1983</td>
+                                </tr>
+                                <tr>
+                                    <th>Startday</th>
+                                    <td>05.02.1983</td>
+                                </tr>
+                                <tr>
+                                    <th>From</th>
+                                    <td>Cherkassy</td>
+                                </tr>
+                                <tr>
+                                    <th>Language</th>
+                                    <td>ru / ua / en</td>
+                                </tr>
+                                <tr>
+                                    <th>Tel</th>
+                                    <td><a href="tel:+6494461709">(093) 98 05 647</a></td>
+                                </tr>
+                                <tr>
+                                    <th>Email</th>
+                                    <td><a href="mailto:pavel_v@gmail.com">pavel_v@gmail.com</a></td>
+                                </tr>
+                                <tr>
+                                    <th>Skype</th>
+                                    <td>pavel_voron</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="info-folio">
+                            <div class="folio-slider">
+                                <div><img src="images/big_photo.png" /></div>
+                                <div><img src="images/big_photo.png" /></div>
+                                <div><img src="images/big_photo.png" /></div>
                             </div>
-                            <h2 class="section-title">Pavel Voronovsky</h2>
-                        </a>
-                        <a href="/" class="subtitle-link">
-                            <span class="section-subtitle">Art-Director</span>
-                        </a>
+                        </div>
                     </section>
-                    <section class="worker-item">
-                        <a href="/" class="main-link">
-                            <div class="img-wrapper">
-                                <img src="images/Pavel.png" />
-                            </div>
-                            <h2 class="section-title">Pavel Voronovsky</h2>
-                        </a>
-                        <a href="/" class="subtitle-link">
-                            <span class="section-subtitle">Art-Director</span>
-                        </a>
-                    </section><section class="worker-item">
-                    <a href="/" class="main-link">
-                        <div class="img-wrapper">
-                            <img src="images/Pavel.png" />
+                    <section class="secondary-info">
+                        <div class="tabs tabs_default">
+                            <ul class="horizontal">
+                                <li class="active">
+                                    <a href="#tab-1" class="tab-1">
+                                        <h3 class="tab-title">Achievements</h3>
+                                        <div class="tab-img"></div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#tab-2" class="tab-2">
+                                        <h3 class="tab-title">Hobby</h3>
+                                        <div class="tab-img"></div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#tab-3" class="tab-3">
+                                        <h3 class="tab-title">Portfolio</h3>
+                                        <div class="tab-img"></div>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div id="tab-1" style="display: block;"><span>This is the default tab functionality.</span></div>
+                            <div id="tab-2" style="display: none;"><span>Tab 2</span></div>
+                            <div id="tab-3" style="display: none;"><span>Tab 3</span></div>
                         </div>
-                        <h2 class="section-title">Pavel Voronovsky</h2>
-                    </a>
-                    <a href="/" class="subtitle-link">
-                        <span class="section-subtitle">Art-Director</span>
-                    </a>
-                </section><section class="worker-item">
-                    <a href="/" class="main-link">
-                        <div class="img-wrapper">
-                            <img src="images/Pavel.png" />
-                        </div>
-                        <h2 class="section-title">Pavel Voronovsky</h2>
-                    </a>
-                    <a href="/" class="subtitle-link">
-                        <span class="section-subtitle">Art-Director</span>
-                    </a>
-                </section><section class="worker-item">
-                    <a href="/" class="main-link">
-                        <div class="img-wrapper">
-                            <img src="images/Pavel.png" />
-                        </div>
-                        <h2 class="section-title">Pavel Voronovsky</h2>
-                    </a>
-                    <a href="/" class="subtitle-link">
-                        <span class="section-subtitle">Art-Director</span>
-                    </a>
-                </section><section class="worker-item">
-                    <a href="/" class="main-link">
-                        <div class="img-wrapper">
-                            <img src="images/Pavel.png" />
-                        </div>
-                        <h2 class="section-title">Pavel Voronovsky</h2>
-                    </a>
-                    <a href="/" class="subtitle-link">
-                        <span class="section-subtitle">Art-Director</span>
-                    </a>
-                </section><section class="worker-item">
-                    <a href="/" class="main-link">
-                        <div class="img-wrapper">
-                            <img src="images/Pavel.png" />
-                        </div>
-                        <h2 class="section-title">Pavel Voronovsky</h2>
-                    </a>
-                    <a href="/" class="subtitle-link">
-                        <span class="section-subtitle">Art-Director</span>
-                    </a>
-                </section><section class="worker-item">
-                    <a href="/" class="main-link">
-                        <div class="img-wrapper">
-                            <img src="images/Pavel.png" />
-                        </div>
-                        <h2 class="section-title">Pavel Voronovsky</h2>
-                    </a>
-                    <a href="/" class="subtitle-link">
-                        <span class="section-subtitle">Art-Director</span>
-                    </a>
-                </section>
+                    </section>
                 </div>
             </div>
         </main>
