have finished profile page

--- a/index.html
+++ b/index.html
@@ -64,5 +64,22 @@
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="container">
+                <div class="footer-content">
+                    <div class="copyright">
+                        <span class="copy">2016 eKreative hackatone project</span>
+                    </div>
+                    <div class="footer-logo">
+                        <a href="/">
+                            <img src="images/footer-logo.png" />
+                        </a>
+                    </div>
+                    <div class="scroll-up-btn">
+                        <span class="scroll-btn"></span>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
