--- a/profile-page.html
+++ b/profile-page.html
@@ -104,13 +104,55 @@
                                     </a>
                                 </li>
                             </ul>
-                            <div id="tab-1" style="display: block;"><span>This is the default tab functionality.</span></div>
-                            <div id="tab-2" style="display: none;"><span>Tab 2</span></div>
-                            <div id="tab-3" style="display: none;"><span>Tab 3</span></div>
+                            <div class="tab-content" id="tab-1" style="display: block;">
+                                <ul class="achievemnts-list">
+                                    <li class="list-item">
+                                        <img src="images/1Year.png" />
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="images/1Year.png" />
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="images/1Year.png" />
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="images/1Year.png" />
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="images/1Year.png" />
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="images/1Year.png" />
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="tab-content" id="tab-2" style="display: none;">
+                                <span>Tab 2</span>
+                            </div>
+                            <div class="tab-content" id="tab-3" style="display: none;">
+                                <span>Tab 3</span>
+                            </div>
                         </div>
                     </section>
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="container">
+                <div class="footer-content">
+                    <div class="copyright">
+                        <span class="copy">2016 eKreative hackatone project</span>
+                    </div>
+                    <div class="footer-logo">
+                        <a href="/">
+                            <img src="images/footer-logo.png" />
+                        </a>
+                    </div>
+                    <div class="scroll-up-btn">
+                        <span class="scroll-btn"></span>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
