--- a/profile-page.html
+++ b/profile-page.html
@@ -149,8 +149,8 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="tab-content" id="tab-2" style="display: none;">
-                                <span>Tab 2</span>
+                            <div class="tab-content" id="tab-2" style="display: none;" data-bind="with: worker">
+                                <span data-bind="text:hobby"></span>
                             </div>
                             <div class="tab-content" id="tab-3" style="display: none;">
                                 <span>Tab 3</span>
