--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <script src="js/findermodel.js"></script>
         <script src="js/custom.js"></script>
         <script src="js/select2.min.js"></script>
+        <script src="js/jquery.tabslet.min.js"></script>
     </head>
-    <body>
+    <body class="home">
         <header>
             <div class="container">
                 <div class="header-logo">
