--- a/profile-page.html
+++ b/profile-page.html
@@ -94,7 +94,7 @@
                                     <td data-bind="text:address"></td>
                                 </tr>
                                 <tr>
-                                    <th>Credentials to Computer</th>
+                                    <th>Credentials</th>
                                     <td data-bind="text:loginToComputer"></td>
                                 </tr>
                                 <tr>
@@ -177,5 +177,6 @@
                 </div>
             </div>
         </footer>
+        <div id="loading"></div>
     </body>
 </html>
