profile page back link add

--- a/profile-page.html
+++ b/profile-page.html
@@ -26,6 +26,7 @@
                     </div>
                     <h1 class="name-title" data-bind="text:name"></h1>
                     <span class="caste-title" data-bind="if caste.length()>0, text:caste()[0].name"></span>
+                    <a href="/" class="back-linkl">Back</a>
                     <ul class="social-btns">
                         <li class="list-item">
                             <a href="/" class="facebook-link item-link"></a>
