moved to local server

--- a/profile-page.html
+++ b/profile-page.html
@@ -82,7 +82,7 @@
                                     <td><a data-bind="text:workingEmail,attr:{href:'mailto:' + workingEmail()}"></a></td>
                                 </tr>
                                 <tr>
-                                    <th>*</th>
+                                    <th>&nbsp;</th>
                                     <td></td>
                                 </tr>
                                 <tr>
