--- a/profile-page.html
+++ b/profile-page.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
         <meta charset="utf-8">
         <link href="css/select2.min.css" rel="stylesheet" />
         <link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -14,6 +15,7 @@
         <script src="js/select2.min.js"></script>
         <script src="js/slick.min.js"></script>
         <script src="js/jquery.tabslet.min.js"></script>
+        <title>eWorkers</title>
     </head>
     <body class="profile-page">
         <header>
