--- a/profile-page.html
+++ b/profile-page.html
@@ -156,7 +156,7 @@
                                 <span data-bind="text:hobby"></span>
                             </div>
                             <div class="tab-content" id="tab-3" style="display: none;">
-                                <span>Tab 3</span>
+                                <span></span>
                             </div>
                         </div>
                     </section>
