checking auto git pull

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="copyright">
-                        <span class="copy">2016 eKreative hackatone project</span>
+                        <span class="copy">2016 eKreative hackatone project.</span>
                     </div>
                     <div class="footer-logo">
                         <a href="/">
