--- a/profile-page.html
+++ b/profile-page.html
@@ -9,7 +9,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="js/knockout-3.4.0.js"></script>
-        <script src="js/base.js"></script>
+        <script src="js/core.js"></script>
         <script src="js/detailPageModel.js"></script>
         <script src="js/custom.js"></script>
         <script src="js/select2.min.js"></script>
