--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="js/knockout-3.4.0.js"></script>
-        <script src="js/base.js"></script>
+        <script src="js/core.js"></script>
 
         <script src="js/custom.js"></script>
         <title>eWorkers, Login page</title>
