checking my permissions

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
     <head>
         <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
@@ -44,6 +44,7 @@
                             <option value="birthday">Birthday</option>
                         </select>
                     </div>
+
                     <!--<h2>Participants</h2>-->
                     <!--Here are the participants:-->
                     <!--<div data-bind="template: { name: 'person-template', foreach: people }"></div>-->
