--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
         <title>eWorkers, Login page</title>
     </head>
-    <body class="home">
+    <body class="loginpage">
         <header>
             <div class="container">
                 <div class="header-logo">
@@ -26,11 +26,12 @@
             </div>
         </header>
         <main>
-            <div class="container">
-                <p data-bind="text:message"></p>
-                <div><input data-bind="value:username" type="text"/></div>
-                <div><input data-bind="value:password" id="password" type="password"/></div>
-                <div><input data-bind="click:doLogin" type="button" value="sign in"/></div>
+
+            <div class="login-form">
+                <p data-bind="visible:message().length > 0, text:message"></p>
+                <input data-bind="value:username" type="text" placeholder="redmine username"/>
+                <input data-bind="value:password" id="password" placeholder="password" type="password"/>
+                <input data-bind="click:doLogin" type="button" value="sign in"/>
             </div>
 
         </main>
